# neuro_assistiant

./: .gitignore  README.md  core_config.py  index_config.json  index_config.json.example  logging_config.py  pyproject.toml  requerements.txt
RAG/: __init__.py  engine.py  exceptions.py  indexes.py  readers.py
RAG/parsers/: yandex_doc_rules.py
RAG/parsers/yandex/: bad_links.txt  yandex_doc_rules.py  yandex_legal_links.json
RAG/utils/: __init__.py  classifier.py  create_template_index_config_file.py  key_extrator.py
auth/: authentication_in_hf.py
conversation_config/: languages_vocab.json  models_config.json
model/: __init__.py  conversation.py  llama_index_model_llamacpp.py  models.py
tests/: cuda.py
