[tool.poetry]
name = "neuro-assistiant"
version = "0.1.0"
description = ""
authors = ["Ivan Sumin <sumin.ivan01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
