[tool.poetry]
name = "neuro-assistiant"
version = "0.1.0"
description = ""
authors = ["Ivan Sumin <sumin.ivan01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.18"
transformers = "^4.45.2"
bitsandbytes = "^0.44.1"
peft = "^0.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
